<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/estate_imageview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/estate_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Name" />

                    <TextView
                        android:id="@+id/estate_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price" />
                </LinearLayout>

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/estate_surface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Surface" />

                    <TextView
                        android:id="@+id/estate_rooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rooms" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/estate_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="Description" />

            <TextView
                android:id="@+id/estate_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="Adresse"
                android:layout_marginTop="8dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/estate_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Estate type"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/estate_agent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Estate agent"
                    android:layout_marginTop="4dp" />

            </LinearLayout>



            <TextView
                android:id="@+id/estate_activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="Estate Activities" />


            <TextView
                android:id="@+id/estate_date_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="Date sale" />

            <TextView
                android:id="@+id/estate_date_sold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="Date sold" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center">

                <VideoView
                    android:id="@+id/main_display_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/main_display_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_media_play"
                    android:layout_gravity="center" />

                <ImageButton
                    android:id="@+id/pauseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_media_pause"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp" />

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/btn_map"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_background"
        android:src="@drawable/ic_map"
        android:alpha="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
