...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- RecyclerView for real estate items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/realEstateRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Container for add_new_estate.xml -->
    <FrameLayout
...
