...
        android:paddingStart="16dp"
        android:clickable="true"
        android:src="@drawable/ic_menu_burger"
        android:focusable="true" />

    <ImageView
        android:id="@+id/search_estate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:clickable="true"
...
