...
        <Button
            android:id="@+id/buttonAddEstate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:text="OK"
            android:textColor="#FFFF" />


    </LinearLayout>
</ScrollView>
